Updated build-jar.sh, create-runtime.sh, fizzbuzz sample, and README. Changed build-native to use jar file